--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     ]
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.17.1",
     "node-sass": "^4.12.0",
-    "react-pose": "^4.0.8"
+    "react-pose": "^4.0.8",
+    "react-router-dom": "^5.0.1"
   }
 }
