--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "mysql": "^2.17.1",
     "node-sass": "^4.12.0",
     "react-pose": "^4.0.8",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scroll": "^1.7.12",
+    "stylefire": "^5.0.0"
   }
 }
